helm/grafana/test.yaml
---
# Source: grafana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-grafana
  namespace: c6af30-prod
  labels:
    helm.sh/chart: grafana-6.46.1
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: sso-grafana
    app.kubernetes.io/version: "9.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: sso-grafana
---
# Source: grafana/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-grafana
  namespace: c6af30-prod
  labels:
    helm.sh/chart: grafana-6.46.1
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: sso-grafana
    app.kubernetes.io/version: "9.3.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/instance: sso-grafana
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: sso-grafana
      annotations:
        checksum/config: cbefe0e47f1315af61aca37b1107e32558628913f01134db667b54ca8e279659
        checksum/dashboards-json-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/sc-dashboard-provider-config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret: 11108df7d57af8ab4f24e010cbccf59545b84cc70a8a5c893a9679b0bc188dbd
    spec:

      serviceAccountName: sso-grafana
      automountServiceAccountToken: true
      enableServiceLinks: true
      containers:
        - name: grafana
          image: "grafana/grafana:9.3.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/grafana.ini"
              subPath: grafana.ini
            - name: storage
              mountPath: "/var/lib/grafana"
          ports:
            - name: grafana
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
      volumes:
        - name: config
          configMap:
            name: sso-grafana
        - name: storage
          persistentVolumeClaim:
            claimName: sso-grafana
